--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                             blockchain and off-chain.</p>
                     </div><!-- add class -->
                     <button></button><!-- add class -->
-                    <button></button><!-- add class --> 
+                    <button></button><!-- add class -->
                 </div>
 
                 <div class="features__carousel-block">
@@ -619,11 +619,12 @@
                         </div>
                         <div>
                             <h2 class="application__call"> Download Our Demo Application</h2>
-                        </div> 
+                        </div>
                     </div>
                     <div>
-                        <p class="application__action">Try all the available features for free and exchange cryptocurrency
-                        with ease.</p>
+                        <p class="application__action">Try all the available features for free and exchange
+                            cryptocurrency
+                            with ease.</p>
                     </div>
 
                     <div class="application__advantage advantage">
@@ -666,7 +667,7 @@
                                         <img src="img/icon_bitcoin.svg" alt="icon bitcoin">
                                     </div>
                                 </div>
-                                
+
                                 <div class="advantage__text">
                                     <div class="advantage__name">
                                         <p>Get Instant Notifications</p>
@@ -1001,7 +1002,8 @@
                             <div class="container__article-investors">
                                 <p class="text__article-investors">«I communicate with dozens of
                                     crypto projects every month. However, Cryptochange
-                                    seemed to me to be very smart guys with an important idea.»</p>
+                                    seemed to me to be very smart guys with an important idea.»
+                                </p>
                             </div>
                             <p class="article__datetime-investors">June 12, 2022</p>
                         </div>
@@ -1094,7 +1096,7 @@
                             </div>
                             <div class="container__text-article-news">
                                 <p class="text__article-news">UK Sets out Its Vision for
-                                Post-Brexit Financial Market
+                                    Post-Brexit Financial Market
                                 </p>
                             </div>
                             <p class="article__datetime-news">Thu, July 1, 2022, 4:15 PM</p>
@@ -1107,8 +1109,8 @@
                                 </div>
                             </div>
                             <div class="container__text-article-news">
-                                <p class="text__article-news>Top 5 Trends That Will Define the
-                                Landscape of Financial World
+                                <p class="text__article-news">Top 5 Trends That Will Define the
+                                    Landscape of Financial World
                                 </p>
                             </div>
                             <p class=" article__datetime-news">Tue, June 29, 2022, 10:15 AM</p>
