fixed mistakes in 8 block

--- a/index.html
+++ b/index.html
@@ -525,7 +525,8 @@
         <!--7 section-->
         <section id="download_application" class="core__features features">
             <div class="features__text">
-                <div class="application__box-line"> <!--yellow line-->
+                <div class="application__box-line">
+                    <!--yellow line-->
                     <h2 class="application__line">—</h2>
                 </div>
                 <div class="features__start">
@@ -614,7 +615,8 @@
                 <div class="application__text">
 
                     <div class="application__download">
-                        <div class="application__box-line"> <!--yellow line-->
+                        <div class="application__box-line">
+                            <!--yellow line-->
                             <h2 class="application__line">—</h2>
                         </div>
                         <div>
@@ -713,7 +715,7 @@
 
                 <div class="experienced__team">
                     <div class="title__container">
-                        <img class="title__line" src="img/yellow_line.jpg" alt="Yellow Line">
+                        <span class="title__line">-</span>
                         <h2 class="title__name">Experienced Team</h2>
                     </div>
                     <div class="experienced__team-content">
@@ -814,7 +816,7 @@
                     </div>
                 </div>
                 <div class="title__container">
-                    <img class="title__line" src="img/yellow_line.jpg" alt="Yellow Line">
+                    <span class="title__line">-</span>
                     <h2 class="title__name">Job Opportunities</h2>
                 </div>
                 <div class="job__opportunities">
@@ -838,7 +840,7 @@
                 </div>
 
                 <div class="title__container">
-                    <img class="title__line" src="img/yellow_line.jpg" alt="Yellow Line">
+                    <span class="title__line">-</span>
                     <h2 class="title__name">Media About Cryptochange</h2>
                 </div>
                 <div id="press" class="press__media">
@@ -885,15 +887,18 @@
                         <p class="press__name">Medium</p>
                     </div>
                 </div>
-                <p class="paragraph__want-become-a-partner"><span>*</span> Do you want to become our partner? Click on
-                    the button
-                    and contact us in any convenient way for
-                    you.
-                </p>
-                <div class="press__become-a-partner">
+                <div class="container__want-become-partner">
+                    <p class="paragraph__want-become-a-partner"><span>*</span> Do you want to become our partner? Click
+                        on
+                        the button
+                        and contact us in any convenient way for
+                        you.
+                    </p>
+                    <div class="press__become-a-partner">
 
-                    <a class="press__contact-us-button" href="#">Contact Us</a>
-                    <a class="press__learn-more" href="#">Learn More &rarr;</a>
+                        <a class="press__contact-us-button" href="#">Contact Us</a>
+                        <a class="press__learn-more" href="#">Learn More &rarr;</a>
+                    </div>
                 </div>
             </div>
         </section>
