add empty block

--- a/index.html
+++ b/index.html
@@ -766,6 +766,7 @@
                             </article>
                         </div>
                         <div class="experienced__team-content-second-group">
+                            <article class="experienced__team-item-empty"></article>
                             <article class="experienced__team-item">
                                 <div class="experienced__team-icon">
                                     <img src="img/john_asper.png" alt="John Asper">
