updated footer css

--- a/index.html
+++ b/index.html
@@ -1266,7 +1266,7 @@
             </div>
             <div class="footer__useful-links">
                 <h3 class="footer__useful-links-header">Useful Links</h3>
-                <div class="footer__useful-links-header-underline">-</div>
+                <div class="footer__useful-links-header-underline"></div>
                 <nav class="footer__useful-links-menu">
                     <a href="#" class="footer__useful-links-menu-item">About</a>
                     <a href="#" class="footer__useful-links-menu-item">Roadmap</a>
@@ -1280,7 +1280,7 @@
             </div>
             <div class="footer__follow-us-info">
                 <h3 class="footer__follow-us-header">Follow Us</h3>
-                <div class="footer__follow-us-header-underline">-</div>
+                <div class="footer__follow-us-header-underline"></div>
                 <p class="footer__follow-us-paragraph">We're building a strong crypto community that will boost the
                     adoption
                     of blockchain-based projects in the financial market.
@@ -1312,6 +1312,7 @@
             <hr class="footer__line">
             <div class="footer__copyright">
                 <p class="footer__copyright-description-item">© Created by</p>
+                <br>
                 <p class="footer__copyright-description-item">All rights Reserved</p>
             </div>
         </div>
