--- a/index.html
+++ b/index.html
@@ -699,12 +699,18 @@
                     </div>
                 </div>
             </div>
+            <div class="banner__wraper">
             <div class="banner__background">
                 <div class="banner__download">
-                    <h2 class="banner__call">Download Whitepaper</h2>
-                    <p class="banner__description">Learn more about our project and cryptonomics.<a href="#">Download
+                    <div>
+                        <h2 class="banner__call">Download Whitepaper</h2>
+                    </div>
+                    <div>
+                        <p class="banner__description">Learn more about our project and cryptonomics.<a href="#">Download
                             Now ↓</a></p>
+                    </div>
                 </div>
+            </div>
             </div>
         </section>
         <!--end of section 7-->
