added stylesheets in stages.css

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="container">
                 <div class="content-container">
                     <div class="ico-progress__title-container section-title">
-                        <h2 class="section-title__title"><span class="yellow__line">-</span>ICO Progress</h2>
+                        <h2 class="section-title__title"><span class="yellow__line">- </span>ICO Progress</h2>
                     </div>
                     <div class="ico-progress__row row">
                         <div class="row__title">
@@ -218,28 +218,8 @@
                     </div>
                     <div class="ico-progress__image">
                         <img class="ico-progress__image" width="200" src="img/cryptocurrency-chart.jpg"
-                            alt="cryptocurrency-chart">
+                            alt="cryptocurrency chart">
                     </div>
-                    <div class="row__title">
-                        <p class="row__title">BTC Raised</p>
-                        <div class="row__value">
-                            <p class="row__value">1890.0348</p>
-                        </div>
-                    </div>
-                    <div class="row__title">
-                        <p class="row__title">Tokens Distributed
-                        <p>
-                        <div class="row__value">
-                            <p class="row__value">56432</p>
-                        </div>
-                    </div>
-                    <div class="ico-progress__button">
-                        <a class="ico-progress__button button" href="#">Buy CRP Tokens</a>
-                    </div>
-                </div>
-                <div class="ico-progress__image">
-                    <img class="ico-progress__image" width="200" src="img/cryptocurrency-chart.jpg"
-                        alt="cryptocurrency-chart">
 
                 </div>
             </div>
@@ -293,7 +273,7 @@
             <div class="container">
                 <div class="roadmap__title-container roadmap-title">
                     <div class="roadmap-title">
-                        <h2 class="roadmap-title__title"><span class="yellow__line">-</span>What Stage Are We at?</h2>
+                        <h2 class="roadmap-title__title"><span class="yellow__line">- </span>What Stage Are We at?</h2>
                     </div>
                     <div class="roadmap-title__addition">
                         <p class="roadmap-title__addition">Want to learn more about our project?<a
@@ -303,10 +283,9 @@
                 <div class="roadmap__table-container table">
                     <div class="table__column">
                         <div class="table__figure">
-                            <div class="table__circle">
+                            <div class="table__circle"> 
                                 <div class="table__number">01</div>
                             </div>
-                            <!--Css code-->
                         </div>
                         <div class="table__column column">
                             <div class="column__text text">
@@ -326,8 +305,10 @@
                         </div>
                     </div>
                     <div class="table__column">
-                        <div>
-                            <!--Css code-->
+                        <div class="table__figure">
+                            <div class="table__circle"> 
+                                <div class="table__number">02</div>
+                            </div>
                         </div>
                         <div class="table__column column">
                             <div class="column__text text">
@@ -348,8 +329,10 @@
                         </div>
                     </div>
                     <div class="table__column">
-                        <div>
-                            <!--Css code-->
+                        <div class="table__figure">
+                            <div class="table__circle"> 
+                                <div class="table__number">03</div>
+                            </div>
                         </div>
                         <div class="table__column column">
                             <div class="column__text text">
@@ -372,8 +355,10 @@
                         </div>
                     </div>
                     <div class="table__column">
-                        <div>
-                            <!--Css code-->
+                        <div class="table__figure">
+                            <div class="table__circle"> 
+                                <div class="table__number">04</div>
+                            </div>
                         </div>
                         <div class="table__column column">
                             <div class="column__text text">
@@ -393,8 +378,10 @@
                         </div>
                     </div>
                     <div class="table__column">
-                        <div>
-                            <!--Css code-->
+                        <div class="table__figure">
+                            <div class="table__circle"> 
+                                <div class="table__number">05</div>
+                            </div>
                         </div>
                         <div class="table__column column">
                             <div class="column__text text">
@@ -402,7 +389,7 @@
                                     <p class="text__month-year">May, 2022</p>
                                 </div>
                                 <div class="text__title">
-                                    <p class="text__title">Cryptochange ICO/p>
+                                    <p class="text__title">Cryptochange ICO</p>
                                 </div>
                                 <div class="text__description">
                                     <p class="text__description">We released our CRP token that will be used on the
@@ -414,8 +401,10 @@
                         </div>
                     </div>
                     <div class="table__column">
-                        <div>
-                            <!--Css code-->
+                        <div class="table__figure">
+                            <div class="table__circle"> 
+                                <div class="table__number">06</div>
+                            </div>
                         </div>
                         <div class="table__column column">
                             <div class="column__text text">
@@ -435,8 +424,10 @@
                         </div>
                     </div>
                     <div class="table__column">
-                        <div>
-                            <!--Css code-->
+                        <div class="table__figure">
+                            <div class="table__circle"> 
+                                <div class="table__number">07</div>
+                            </div>
                         </div>
                         <div class="table__column column">
                             <div class="column__text text">
