created file js and added clock

--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
             <div class="container">
                 <div class="content-container">
                     <div class="ico-progress__title-container section-title">
-                        <h2 class="section-title__title"><span class="yellow__line">- </span>ICO Progress</h2>
+                        <h2 class="section-title__title"><span class="title-line">- </span>ICO Progress</h2>
+                        <div class="clock"></div>
                     </div>
                     <div class="ico-progress__row row">
                         <div class="row__title">
@@ -283,7 +284,7 @@
                 <div class="roadmap__table-container table">
                     <div class="table__column">
                         <div class="table__figure">
-                            <div class="table__circle"> 
+                            <div class="table__circle">
                                 <div class="table__number">01</div>
                             </div>
                         </div>
@@ -306,7 +307,7 @@
                     </div>
                     <div class="table__column">
                         <div class="table__figure">
-                            <div class="table__circle"> 
+                            <div class="table__circle">
                                 <div class="table__number">02</div>
                             </div>
                         </div>
@@ -330,7 +331,7 @@
                     </div>
                     <div class="table__column">
                         <div class="table__figure">
-                            <div class="table__circle"> 
+                            <div class="table__circle">
                                 <div class="table__number">03</div>
                             </div>
                         </div>
@@ -356,7 +357,7 @@
                     </div>
                     <div class="table__column">
                         <div class="table__figure">
-                            <div class="table__circle"> 
+                            <div class="table__circle">
                                 <div class="table__number">04</div>
                             </div>
                         </div>
@@ -379,7 +380,7 @@
                     </div>
                     <div class="table__column">
                         <div class="table__figure">
-                            <div class="table__circle"> 
+                            <div class="table__circle">
                                 <div class="table__number">05</div>
                             </div>
                         </div>
@@ -402,7 +403,7 @@
                     </div>
                     <div class="table__column">
                         <div class="table__figure">
-                            <div class="table__circle"> 
+                            <div class="table__circle">
                                 <div class="table__number">06</div>
                             </div>
                         </div>
@@ -425,7 +426,7 @@
                     </div>
                     <div class="table__column">
                         <div class="table__figure">
-                            <div class="table__circle"> 
+                            <div class="table__circle">
                                 <div class="table__number">07</div>
                             </div>
                         </div>
@@ -691,17 +692,18 @@
                 </div>
             </div>
             <div class="banner__wraper">
-            <div class="banner__background">
-                <div class="banner__download">
-                    <div>
-                        <h2 class="banner__call">Download Whitepaper</h2>
-                    </div>
-                    <div>
-                        <p class="banner__description">Learn more about our project and cryptonomics.<a href="#">Download
-                            Now ↓</a></p>
+                <div class="banner__background">
+                    <div class="banner__download">
+                        <div>
+                            <h2 class="banner__call">Download Whitepaper</h2>
+                        </div>
+                        <div>
+                            <p class="banner__description">Learn more about our project and cryptonomics.<a
+                                    href="#">Download
+                                    Now ↓</a></p>
+                        </div>
                     </div>
                 </div>
-            </div>
             </div>
         </section>
         <!--end of section 7-->
@@ -1314,6 +1316,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/clock.js"></script>
 </body>
 
 </html>
