--- a/index.html
+++ b/index.html
@@ -821,24 +821,30 @@
                         <span class="title__line">-</span>
                         <h2 class="title__name">Job Opportunities</h2>
                     </div>
-                    <div class="job__item">
-                        <p class="job__city">New York</p>
-                        <p class="job__post">Development Operations Engineer</p>
-                        <a class="job__apply" href="#">Apply &rarr;</a>
-                    </div>
-                    <hr class="job__line" />
-                    <div class="job__item">
-                        <p class="job__city">New York</p>
-                        <p class="job__post">Paid Acquisition Manager</p>
-                        <a class="job__apply" href="#">Apply &rarr;</a>
-                    </div>
-                    <hr class="job__line" />
-                    <div class="job__item">
-                        <p class="job__city">New York</p>
-                        <p class="job__post">Golang Senior Developer</p>
-                        <a class="job__apply" href="#">Apply &rarr;</a>
+                    <div class="job__item-wrap">
+                        <div class="job__item">
+                            <p class="job__city">New York</p>
+                            <p class="job__post">Development Operations Engineer</p>
+                            <a class="job__apply" href="#">Apply &rarr;</a>
+                            <hr class="job__line" />
+                        </div>
+
+                        <div class="job__item">
+                            <p class="job__city">New York</p>
+                            <p class="job__post">Paid Acquisition Manager</p>
+                            <a class="job__apply" href="#">Apply &rarr;</a>
+                            <hr class="job__line" />
+                        </div>
+
+                        <div class="job__item">
+                            <p class="job__city">New York</p>
+                            <p class="job__post">Golang Senior Developer</p>
+                            <a class="job__apply" href="#">Apply &rarr;</a>
+                        </div>
                     </div>
                 </div>
+
+
             </div>
             <div id="press" class="press__media">
                 <div class="title__container">
@@ -846,45 +852,47 @@
                     <h2 class="title__name">Media About Cryptochange</h2>
                 </div>
                 <!--<div class="press__slider"></div>-->
-                <div class="press__items">
-                    <img class="press__icon" src="img/coinpost.svg" alt="CoinPost">
-                    <p class="press__name">CoinPost</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/cointelegraph.svg" alt="CoinTelegraph">
-                    <p class="press__name">CoinTelegraph</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/agora.svg" alt="Agora">
-                    <p class="press__name">Agora</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/coin_schedule.svg" alt="CoinSchedule">
-                    <p class="press__name">CoinSchedule</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/bench.svg" alt="ICO bench">
-                    <p class="press__name">ICO bench</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/icotop.svg" alt="ICOTOP">
-                    <p class="press__name">ICOTOP</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/de_center.svg" alt="DeCenter">
-                    <p class="press__name">DeCenter</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/market_watch.svg" alt="Market Watch">
-                    <p class="press__name">Market Watch</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/coin_market_cal.svg" alt="CoinMarketCal">
-                    <p class="press__name">CoinMarketCal</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/medium.svg" alt="Medium">
-                    <p class="press__name">Medium</p>
+                <div class="press__items-wrap">
+                    <div class="press__items">
+                        <img class="press__icon" src="img/coinpost.svg" alt="CoinPost">
+                        <p class="press__name">CoinPost</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/cointelegraph.svg" alt="CoinTelegraph">
+                        <p class="press__name">CoinTelegraph</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/agora.svg" alt="Agora">
+                        <p class="press__name">Agora</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/coin_schedule.svg" alt="CoinSchedule">
+                        <p class="press__name">CoinSchedule</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/bench.svg" alt="ICO bench">
+                        <p class="press__name">ICO bench</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/icotop.svg" alt="ICOTOP">
+                        <p class="press__name">ICOTOP</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/de_center.svg" alt="DeCenter">
+                        <p class="press__name">DeCenter</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/market_watch.svg" alt="Market Watch">
+                        <p class="press__name">Market Watch</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/coin_market_cal.svg" alt="CoinMarketCal">
+                        <p class="press__name">CoinMarketCal</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/medium.svg" alt="Medium">
+                        <p class="press__name">Medium</p>
+                    </div>
                 </div>
             </div>
             <div class="container__want-become-partner">
