added burger menu fix-1

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </div>
-            <div class="header__menu" container>
+            <div class="header__menu  container" >
                 <ul class="header__menu-list list">
                     <li class="list__about-container">
                         <a class="list__about-link header__list" href="#why__cryptochange">About</a>
