--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
             <a class="header__banner-download" href="#">Download Whitepaper →</a>
         </div>
     </header>
-
     <main>
         <!--2 section-->
         <!--add class name into tags (p,button,div)-->
@@ -239,7 +238,6 @@
                         <img class="ico-progress__image" width="200" src="img/cryptocurrency-chart.jpg"
                             alt="cryptocurrency chart">
                     </div>
-
                 </div>
             </div>
         </section>
@@ -283,7 +281,6 @@
                 <p>Do you need to withdraw your crypto assets to your bank account? No worries, we can do that due to
                     our financial partners.</p>
             </div>
-
         </section>
         <!--end of 4 section-->
         <!--5 section-->
@@ -1343,6 +1340,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/heder-burger.js"></script>
 </body>
-
 </html>
